add code, paragraph example for testing

--- a/style-test.ipynb
+++ b/style-test.ipynb
@@ -11,28 +11,11 @@
     " 1. Bullet one\n",
     " 2. Bullet two\n",
     " \n",
-    " Paragraph of text."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/ktaks/.jupyter\\\\custom'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import jupyter_core\n",
-    "jupyter_core.paths.jupyter_config_dir() + '\\\\custom'"
+    "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lacus justo, volutpat id lacus a, sollicitudin malesuada enim. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam ut lacus et enim gravida facilisis. Maecenas ultrices nulla id odio venenatis mollis. Donec fermentum massa ac tortor malesuada rutrum. Proin rutrum ipsum non rutrum posuere. Pellentesque nec tellus id dolor dictum tempor. Quisque eu semper orci. In elementum nulla eu leo tempor venenatis. Fusce mollis justo vitae orci semper, ut placerat lectus elementum. Morbi dolor mi, vestibulum quis nisl nec, mollis maximus velit. \n",
+    " \n",
+    " [A link](https://duckduckgo.com)\n",
+    " \n",
+    " "
    ]
   },
   {
@@ -41,28 +24,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = 9"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/ktaks/projects/haas-jupyter-branding'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import os\n",
-    "os.getcwd()"
+    "# a comment\n",
+    "x = 9\n",
+    "\n",
+    "def function1(x, y, z):\n",
+    "    for i in x:\n",
+    "        if i >= 6:\n",
+    "            return \"a string\"\n",
+    "    else:\n",
+    "        print(\"another string\")\n",
+    "    "
    ]
   },
   {
